syntax = "proto3";

package maarpc;

option csharp_namespace = "MaaFramework.Binding.Interop.Grpc";

import "types.proto";

service Image {
  rpc create(EmptyRequest) returns (HandleResponse);
  rpc destroy(HandleRequest) returns (EmptyResponse);
  rpc is_empty(HandleRequest) returns (BoolResponse);
  rpc clear(HandleRequest) returns (EmptyResponse);
  rpc info(HandleRequest) returns (ImageInfoResponse);
  rpc encoded(HandleRequest) returns (BufferResponse);
  rpc set_encoded(HandleBufferRequest) returns (BoolResponse);
}
